# bitcoin-testing

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
bitcoin/: Cargo.toml  README.md
bitcoin/src/: tracing.rs
etherium/: Cargo.toml
etherium/src/: lib.rs  main.rs
src/: main.rs
