[package]
name = "bitcoin-testing"
version = "0.1.0"
edition = "2024"

[dependencies]
bitcoin = "0.32.5"
color-eyre = "0.6.3"
hickory-resolver = "0.25.1"
serde = { version = "1.0.219", features = ["derive", "rc"] }
serde_json = "1.0.140"
time = { version = "0.3.41", features = ["formatting", "local-offset", "macros", "parsing", "serde"] }
tokio = { version = "1.44.2", features = ["full"] }
tracing = "0.1.41"
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt", "time"] }
